Fix #1383 - Truncate long aliases

--- a/static/scss/partials/main.scss
+++ b/static/scss/partials/main.scss
@@ -334,10 +334,40 @@ table {
 .relay-address:hover,
 .relay-address:focus {
     opacity: .75;
+}
 
-    .relay-address--label {
-        text-decoration: underline;
+.desktop-domain {
+    display: none;
+
+    @media #{$mq-md} {
+        display: inline;
     }
+}
+
+.mobile-domain {
+    display: inline;
+
+    @media #{$mq-md} {
+        display: none;
+    }
+}
+
+.relay-address--label {
+
+    max-width: calc((#{$content-xs} - #{$spacing-2xl}));
+
+    @media #{$mq-md} {
+        max-width: $content-xs;
+    }
+
+    @media #{$mq-lg} {
+        max-width: $content-sm;
+    }
+
+    display: inline-block;
+    text-decoration: underline;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .relay-address:active {
